--- a/face/face_1.css
+++ b/face/face_1.css
@@ -345,19 +345,78 @@ footer {
 .face div {
   width: 500px;
   height: 500px;
-  overflow: hidden;
   border-radius: 50%;
+  position: relative;
 }
 
-.face div img {
+@keyframes moveing_x {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(50px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes moveing_x2 {
+  0% {
+    transform: translateX(50px);
+  }
+  50% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(50px);
+  }
+}
+
+@keyframes moveing_y {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(-50px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+.face div img:first-child {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 50%;
+}
+
+.face div img:nth-of-type(2) {
+  position: absolute;
+  top: -41px;
+  left: -288px;
+  height: 200px;
+  animation: moveing_x 2s ease-in-out infinite;
+}
+.face div img:nth-of-type(3) {
+  position: absolute;
+  top: 137px;
+  right: -290px;
+  height: 200px;
+  animation: moveing_y 2s ease-in-out infinite;
+}
+.face div img:nth-of-type(4) {
+  position: absolute;
+  top: 339px;
+  left: -256px;
+  height: 200px;
+  animation: moveing_x2 2s ease-in-out infinite;
 }
 
 .face p {
   padding: 20px 50px;
-  background-color: #adc3ff;
+  background-color: #bae2ff;
   color: #fff;
   border-radius: 15px;
   font-size: 35px;
@@ -383,4 +442,16 @@ footer {
   border-radius: 15px;
   font-size: 24px;
   animation: moveing 2s ease-in-out infinite;
+}
+
+.cur {
+  position: absolute;
+  pointer-events: none;
+  font-family: "Hi Melody", sans-serif;
+  font-size: 6vw;
+  -webkit-text-stroke: 1px #b9ddff;
+  color: #b9ddff8a;
+}
+.cur span {
+  color: #b9ddff;
 }
