--- a/mongsri.css
+++ b/mongsri.css
@@ -534,8 +534,8 @@ main {
   align-items: center;
   color: rgba(255, 255, 255, 0.849);
   text-transform: uppercase;
-  font-size: 5.6rem;
+  font-size: 5rem;
   line-height: 1.25em;
-  font-weight: 500;
-  font-family: "Hi Melody", sans-serif;
+  font-weight: 800;
+  font-family: "pretendard", sans-serif;
 }
