--- a/mongsri.css
+++ b/mongsri.css
@@ -4,6 +4,7 @@
 body,
 html {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: "Pretendard", sans-serif;
@@ -609,7 +610,8 @@ main {
   .slider .item:nth-child(14),
   .slider .item:nth-child(15),
   .slider .item:nth-child(16) {
-    left: 56px;
+    left: 18%;
+    transform: translateX(-50px);
   }
   .slider_wrap p {
     bottom: 76px;
@@ -646,7 +648,8 @@ main {
   .slider .item:nth-child(14),
   .slider .item:nth-child(15),
   .slider .item:nth-child(16) {
-    left: 80px;
+    left: 25%;
+    transform: translateX(-50px);
   }
   .sample {
     font-size: 20px;
