--- a/face/face_1.css
+++ b/face/face_1.css
@@ -95,7 +95,7 @@ header img {
 }
 
 .title {
-  font-size: max(2vw, 24px);
+  font-size: 30px;
   line-height: 1.1;
   padding-bottom: 0.4em;
   color: rgb(255, 255, 255);
@@ -104,7 +104,7 @@ header img {
 }
 
 .text {
-  font-size: max(1vw, 15px);
+  font-size: 16px;
   line-height: 1.4;
   overflow: hidden;
   padding-bottom: 20px;
@@ -189,7 +189,6 @@ header img {
 
 .img_box {
   height: 500px;
-  width: 47%;
   overflow: hidden;
   margin-top: 30px;
   border-radius: 20px;
@@ -657,6 +656,10 @@ footer {
   .face div {
     width: 250px;
     height: 250px;
+  }
+
+  .img_box {
+    width: 100%;
   }
 }
 
